--- a/client/components/download/Progress.module.css
+++ b/client/components/download/Progress.module.css
@@ -18,30 +18,30 @@
   }
   12% {
     box-shadow: 0 -400px rgba(255, 255, 255, 0), 0 -400px rgba(255, 255, 255, 0),
-      0 -400px rgba(255, 255, 255, 0), 0 -260px theme(colors.sky.700);
+      0 -400px rgba(255, 255, 255, 0), 0 -260px theme(colors.main.700);
   }
   25% {
     box-shadow: 0 -400px rgba(255, 255, 255, 0), 0 -400px rgba(255, 255, 255, 0),
-      0 -260px theme(colors.sky.700), 0 -240px theme(colors.sky.700);
+      0 -260px theme(colors.main.700), 0 -240px theme(colors.main.700);
   }
   36% {
-    box-shadow: 0 -400px rgba(255, 255, 255, 0), 0 -260px theme(colors.sky.700),
-      0 -240px theme(colors.sky.700), 0 -220px theme(colors.sky.700);
+    box-shadow: 0 -400px rgba(255, 255, 255, 0), 0 -260px theme(colors.main.700),
+      0 -240px theme(colors.main.700), 0 -220px theme(colors.main.700);
   }
   50% {
-    box-shadow: 0 -260px theme(colors.sky.700), 0 -240px theme(colors.sky.700),
-      0 -220px theme(colors.sky.700), 0 -200px theme(colors.sky.700);
+    box-shadow: 0 -260px theme(colors.main.700), 0 -240px theme(colors.main.700),
+      0 -220px theme(colors.main.700), 0 -200px theme(colors.main.700);
   }
   62% {
-    box-shadow: 0 -240px theme(colors.sky.700), 0 -220px theme(colors.sky.700),
-      0 -200px theme(colors.sky.700), 0 0px rgba(255, 255, 255, 0);
+    box-shadow: 0 -240px theme(colors.main.700), 0 -220px theme(colors.main.700),
+      0 -200px theme(colors.main.700), 0 0px rgba(255, 255, 255, 0);
   }
   75% {
-    box-shadow: 0 -220px theme(colors.sky.700), 0 -200px theme(colors.sky.700),
+    box-shadow: 0 -220px theme(colors.main.700), 0 -200px theme(colors.main.700),
       0 0px rgba(255, 255, 255, 0), 0 0px rgba(255, 255, 255, 0);
   }
   87% {
-    box-shadow: 0 -200px theme(colors.sky.700), 0 0px rgba(255, 255, 255, 0),
+    box-shadow: 0 -200px theme(colors.main.700), 0 0px rgba(255, 255, 255, 0),
       0 0px rgba(255, 255, 255, 0), 0 0px rgba(255, 255, 255, 0);
   }
   100% {
