--- a/client/components/upload/Progress.module.css
+++ b/client/components/upload/Progress.module.css
@@ -17,32 +17,32 @@
       0 0px rgba(255, 255, 255, 0), 0 0px rgba(255, 255, 255, 0);
   }
   12% {
-    box-shadow: 0 -200px theme(colors.sky.700), 0 0px rgba(255, 255, 255, 0),
+    box-shadow: 0 -200px theme(colors.main.700), 0 0px rgba(255, 255, 255, 0),
       0 0px rgba(255, 255, 255, 0), 0 0px rgba(255, 255, 255, 0);
   }
   25% {
-    box-shadow: 0 -220px theme(colors.sky.700), 0 -200px theme(colors.sky.700),
+    box-shadow: 0 -220px theme(colors.main.700), 0 -200px theme(colors.main.700),
       0 0px rgba(255, 255, 255, 0), 0 0px rgba(255, 255, 255, 0);
   }
   36% {
-    box-shadow: 0 -240px theme(colors.sky.700), 0 -220px theme(colors.sky.700),
-      0 -200px theme(colors.sky.700), 0 0px rgba(255, 255, 255, 0);
+    box-shadow: 0 -240px theme(colors.main.700), 0 -220px theme(colors.main.700),
+      0 -200px theme(colors.main.700), 0 0px rgba(255, 255, 255, 0);
   }
   50% {
-    box-shadow: 0 -260px theme(colors.sky.700), 0 -240px theme(colors.sky.700),
-      0 -220px theme(colors.sky.700), 0 -200px theme(colors.sky.700);
+    box-shadow: 0 -260px theme(colors.main.700), 0 -240px theme(colors.main.700),
+      0 -220px theme(colors.main.700), 0 -200px theme(colors.main.700);
   }
   62% {
-    box-shadow: 0 -400px rgba(255, 255, 255, 0), 0 -260px theme(colors.sky.700),
-      0 -240px theme(colors.sky.700), 0 -220px theme(colors.sky.700);
+    box-shadow: 0 -400px rgba(255, 255, 255, 0), 0 -260px theme(colors.main.700),
+      0 -240px theme(colors.main.700), 0 -220px theme(colors.main.700);
   }
   75% {
     box-shadow: 0 -400px rgba(255, 255, 255, 0), 0 -400px rgba(255, 255, 255, 0),
-      0 -260px theme(colors.sky.700), 0 -240px theme(colors.sky.700);
+      0 -260px theme(colors.main.700), 0 -240px theme(colors.main.700);
   }
   87% {
     box-shadow: 0 -400px rgba(255, 255, 255, 0), 0 -400px rgba(255, 255, 255, 0),
-      0 -400px rgba(255, 255, 255, 0), 0 -260px theme(colors.sky.700);
+      0 -400px rgba(255, 255, 255, 0), 0 -260px theme(colors.main.700);
   }
   100% {
     box-shadow: 0 -400px rgba(255, 255, 255, 0), 0 -400px rgba(255, 255, 255, 0),
