--- a/client/components/download/Progress.module.css
+++ b/client/components/download/Progress.module.css
@@ -18,30 +18,30 @@
   }
   12% {
     box-shadow: 0 -400px rgba(255, 255, 255, 0), 0 -400px rgba(255, 255, 255, 0),
-      0 -400px rgba(255, 255, 255, 0), 0 -260px theme(colors.main.mid);
+      0 -400px rgba(255, 255, 255, 0), 0 -260px theme(colors.main.300);
   }
   25% {
     box-shadow: 0 -400px rgba(255, 255, 255, 0), 0 -400px rgba(255, 255, 255, 0),
-      0 -260px theme(colors.main.mid), 0 -240px theme(colors.main.mid);
+      0 -260px theme(colors.main.300), 0 -240px theme(colors.main.300);
   }
   36% {
-    box-shadow: 0 -400px rgba(255, 255, 255, 0), 0 -260px theme(colors.main.mid),
-      0 -240px theme(colors.main.mid), 0 -220px theme(colors.main.mid);
+    box-shadow: 0 -400px rgba(255, 255, 255, 0), 0 -260px theme(colors.main.300),
+      0 -240px theme(colors.main.300), 0 -220px theme(colors.main.300);
   }
   50% {
-    box-shadow: 0 -260px theme(colors.main.mid), 0 -240px theme(colors.main.mid),
-      0 -220px theme(colors.main.mid), 0 -200px theme(colors.main.mid);
+    box-shadow: 0 -260px theme(colors.main.300), 0 -240px theme(colors.main.300),
+      0 -220px theme(colors.main.300), 0 -200px theme(colors.main.300);
   }
   62% {
-    box-shadow: 0 -240px theme(colors.main.mid), 0 -220px theme(colors.main.mid),
-      0 -200px theme(colors.main.mid), 0 0px rgba(255, 255, 255, 0);
+    box-shadow: 0 -240px theme(colors.main.300), 0 -220px theme(colors.main.300),
+      0 -200px theme(colors.main.300), 0 0px rgba(255, 255, 255, 0);
   }
   75% {
-    box-shadow: 0 -220px theme(colors.main.mid), 0 -200px theme(colors.main.mid),
+    box-shadow: 0 -220px theme(colors.main.300), 0 -200px theme(colors.main.300),
       0 0px rgba(255, 255, 255, 0), 0 0px rgba(255, 255, 255, 0);
   }
   87% {
-    box-shadow: 0 -200px theme(colors.main.mid), 0 0px rgba(255, 255, 255, 0),
+    box-shadow: 0 -200px theme(colors.main.300), 0 0px rgba(255, 255, 255, 0),
       0 0px rgba(255, 255, 255, 0), 0 0px rgba(255, 255, 255, 0);
   }
   100% {
