--- a/client/components/download/Progress.module.css
+++ b/client/components/download/Progress.module.css
@@ -13,39 +13,66 @@
 
 @keyframes shadowRolling {
   0% {
-    box-shadow: 0 -400px rgba(255, 255, 255, 0), 0 -400px rgba(255, 255, 255, 0),
-      0 -400px rgba(255, 255, 255, 0), 0 -400px rgba(255, 255, 255, 0);
+    box-shadow:
+      0 -400px rgba(255, 255, 255, 0),
+      0 -400px rgba(255, 255, 255, 0),
+      0 -400px rgba(255, 255, 255, 0),
+      0 -400px rgba(255, 255, 255, 0);
   }
   12% {
-    box-shadow: 0 -400px rgba(255, 255, 255, 0), 0 -400px rgba(255, 255, 255, 0),
-      0 -400px rgba(255, 255, 255, 0), 0 -260px theme(colors.main.300);
+    box-shadow:
+      0 -400px rgba(255, 255, 255, 0),
+      0 -400px rgba(255, 255, 255, 0),
+      0 -400px rgba(255, 255, 255, 0),
+      0 -260px theme(colors.blue.300);
   }
   25% {
-    box-shadow: 0 -400px rgba(255, 255, 255, 0), 0 -400px rgba(255, 255, 255, 0),
-      0 -260px theme(colors.main.300), 0 -240px theme(colors.main.300);
+    box-shadow:
+      0 -400px rgba(255, 255, 255, 0),
+      0 -400px rgba(255, 255, 255, 0),
+      0 -260px theme(colors.blue.300),
+      0 -240px theme(colors.blue.300);
   }
   36% {
-    box-shadow: 0 -400px rgba(255, 255, 255, 0), 0 -260px theme(colors.main.300),
-      0 -240px theme(colors.main.300), 0 -220px theme(colors.main.300);
+    box-shadow:
+      0 -400px rgba(255, 255, 255, 0),
+      0 -260px theme(colors.blue.300),
+      0 -240px theme(colors.blue.300),
+      0 -220px theme(colors.blue.300);
   }
   50% {
-    box-shadow: 0 -260px theme(colors.main.300), 0 -240px theme(colors.main.300),
-      0 -220px theme(colors.main.300), 0 -200px theme(colors.main.300);
+    box-shadow:
+      0 -260px theme(colors.blue.300),
+      0 -240px theme(colors.blue.300),
+      0 -220px theme(colors.blue.300),
+      0 -200px theme(colors.blue.300);
   }
   62% {
-    box-shadow: 0 -240px theme(colors.main.300), 0 -220px theme(colors.main.300),
-      0 -200px theme(colors.main.300), 0 0px rgba(255, 255, 255, 0);
+    box-shadow:
+      0 -240px theme(colors.blue.300),
+      0 -220px theme(colors.blue.300),
+      0 -200px theme(colors.blue.300),
+      0 0px rgba(255, 255, 255, 0);
   }
   75% {
-    box-shadow: 0 -220px theme(colors.main.300), 0 -200px theme(colors.main.300),
-      0 0px rgba(255, 255, 255, 0), 0 0px rgba(255, 255, 255, 0);
+    box-shadow:
+      0 -220px theme(colors.blue.300),
+      0 -200px theme(colors.blue.300),
+      0 0px rgba(255, 255, 255, 0),
+      0 0px rgba(255, 255, 255, 0);
   }
   87% {
-    box-shadow: 0 -200px theme(colors.main.300), 0 0px rgba(255, 255, 255, 0),
-      0 0px rgba(255, 255, 255, 0), 0 0px rgba(255, 255, 255, 0);
+    box-shadow:
+      0 -200px theme(colors.blue.300),
+      0 0px rgba(255, 255, 255, 0),
+      0 0px rgba(255, 255, 255, 0),
+      0 0px rgba(255, 255, 255, 0);
   }
   100% {
-    box-shadow: 0 0px rgba(255, 255, 255, 0), 0 0px rgba(255, 255, 255, 0),
-      0 0px rgba(255, 255, 255, 0), 0 0px rgba(255, 255, 255, 0);
+    box-shadow:
+      0 0px rgba(255, 255, 255, 0),
+      0 0px rgba(255, 255, 255, 0),
+      0 0px rgba(255, 255, 255, 0),
+      0 0px rgba(255, 255, 255, 0);
   }
 }
